--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,9 +1,9 @@
 
     <section class="hero" id="hero">
         <div class="heroText">
-            <h1 [class]="mobileQuery.matches ? 'col-lg-5  mt-5 mb-lg-4 font_video_movil' : 'col-lg-5  mt-5 mb-lg-4 font_video'"  data-aos="fade-up"  data-aos-delay="800">
-                Por siempre contigo
-            </h1>
+            <h2 [class]="mobileQuery.matches ? 'col-lg-5  mt-5 mb-lg-4 font_video_movil' : 'col-lg-5  mt-5 mb-lg-4 font_video'"  data-aos="fade-up"  data-aos-delay="800">
+                Aqui nacen las historias
+            </h2>
     
             <!-- <p class="col-lg-3 text-secondary-white-color" data-aos="fade-up" data-aos-delay="1000">
                 create a great video for your <strong class="custom-underline">website</strong>
