Se agrega total a consulta de precios

--- a/src/app/components/consultaprecios/consultaprecios.component.html
+++ b/src/app/components/consultaprecios/consultaprecios.component.html
@@ -176,6 +176,11 @@
         </tbody>
       </table>
 
+      <div class="form-group col-md-12">
+        <label class="float-right">      
+          <strong>Precio: </strong> {{oPreciosRes.Contenido.Precio}}     
+        </label> 
+      </div> 
 
    
 
